[tool.poetry]
name = "driving-cab-rl"
version = "0.1.0"
description = ""
authors = ["paicaloid <paicaloid@gmail.com>"]
readme = "README.md"
packages = [{include = "driving_cab_rl"}]

[tool.poetry.dependencies]
python = "3.8"
scipy = "^1.10.1"
cmake = "^3.26.0"
gym = {extras = ["toy-text"], version = "^0.26.2"}
jupyter = "^1.0.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
